--- a/views/employee_views.xml
+++ b/views/employee_views.xml
@@ -40,6 +40,15 @@
                 </header>
             </xpath>
             
+            <xpath expr="//div[@name='button_box']" position="inside">
+                <button name="action_view_projects" type="object" class="oe_stat_button" icon="fa-tasks" invisible="project_count == 0">
+                    <field name="project_count" widget="statinfo" string="Projects"/>
+                </button>
+                <button name="action_view_internships" type="object" class="oe_stat_button" icon="fa-id-badge" invisible="internship_count == 0">
+                    <field name="internship_count" widget="statinfo" string="Internships"/>
+                </button>
+            </xpath>
+            
             <xpath expr="//page[@name='public']" position="after">
                 <page name="ensa_details" string="Profile">
                     <group>
